1611. Minimum One Bit Operations...: update explanation

--- a/explanations/1611.MinimumOneBitOperationsToMakeIntegersZero.md
+++ b/explanations/1611.MinimumOneBitOperationsToMakeIntegersZero.md
@@ -47,6 +47,28 @@ The operations saved are **exactly** the operations needed to **build up the nex
 `000 to 101`: $2^3-1 - 2^1-1 = 7 - 1 = 6$
 `000000 to 101101`: $2^6-1 - 2^4-1 + 2^3-1 - 2^1-1 = 63 - 15 + 7 - 1 = 54$
 
+
+_Edit: more on why the **sums and subtractions alternate** each other, replying to a [comment](https://leetcode.com/problems/minimum-one-bit-operations-to-make-integers-zero/solutions/4348108/python3-1611-solution-29-ms-9875-16-mb-2688/comments/2153202) on my explanation_
+
+I honestly didn't think too much about the reason, but that's my _guess_ (im terrible at rigorously demonstrate things):
+to reach any number in format `10000` from `00000` we will **always** encounter a state where one other bit is flipped to `1`:
+
+```
+000 to 100
+001
+011
+010
+110 <- another bit is set
+111
+101 <- another bit is set
+100
+```
+
+so when we can build up **two bits** at the same time, with the number of operations needed to do that: $2^{position}-1 - 2^{position}-1$.
+
+After we build two bits each operation, so the result is an _alternation_ of sums and subs.
+
+
 ## Solution:
 
 - trasform `n` into a list of `0` and `1`
